--- a/service.properties
+++ b/service.properties
@@ -2,3 +2,4 @@ eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://localhost:9090/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+Test
